@@ -1,0 +1,10 @@
+#ifndef BLESERVICE_H
+#define BLESERVICE_H
+#include <Arduino.h>
+
+#include <BLEDevice.h>
+#include <BLEServer.h>
+#include <BLEUtils.h>
+#include <BLE2902.h>
+
+#endif // BLESERVICE_H
